# socionics_research

./: .gitignore  COMPREHENSIVE_SCRAPING.md  README.md  README_ENHANCED.md  REAL_DATA_VERIFICATION.md  cleanup_parquet_standalone.py  comprehensive_test.py  demo.py  hp_search.html  package-lock.json  package.json  pdb_headers.json  readme.md  requirements.txt  test_enhanced_ipdb.py  tmp_clark.txt  tmp_raw_superman.txt  tsconfig.json
PPO dating simulations/: embedding_personality_matching_blueprint.md
bot/: Dockerfile  README.md  headers.example.json  pyproject.toml
bot/data/bot_store/: consolidated_profiles.parquet  message_token_hashes.parquet  message_vectors.parquet  pdb_profiles.parquet  pdb_profiles_normalized.parquet  pdb_profiles_normalized.parquet.backup
bot/src/bot/: __init__.py  cleanup_parquet.py  config.py  ingest.py  knowledge_loader.py  main.py  metrics.py  pdb_analysis.py  pdb_cid.py  pdb_cli.py  pdb_client.py  pdb_edges.py  pdb_embed_search.py  pdb_normalize.py  pdb_storage.py  utils.py
bot/src/socionics_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bot/test_venv/: pyvenv.cfg
bot/tests/: conftest.py  test_guardrails.py  test_hybrid_search.py  test_ingest.py  test_pdb_cid_and_normalize.py  test_permissions.py  test_salt_rotation.py  test_theory_pure.py  test_theory_rag.py  test_utils.py
compass/: README.md  README_PLANET.md  add_personality.js  compass.js  data.js  dev.pid  duckdb_loader.js  globe.js  import_export.js  kmeans.js  kmeans_worker.js  knn_client.js  legend.js  main.js  mbti_data.js  mbti_demo.html  mbti_functions.js  mbti_sphere.js  package-lock.json  package.json  rag_api.js  search.js  search_csv.js  search_parquet.js  server.js  server.pid  style.css  vec_worker.js  vectors_knn.js  vite.config.js
compass_backup_20250819_211107/: add_personality.js  compass_clean.js  data.js  hnswlib_loader.js  import_export.js  index.html  legend.js  package-lock.json  search.js  search_parquet.js  tooltip.js  vec_worker.js  vectors_knn.js
(+151 files in other folders)
