[project]
name = "socionics-bot"
version = "0.1.0"
description = "Discord bot for Socionics research community with LLM-assisted responses"
authors = [ {name="Project Team"} ]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
  "discord.py>=2.3.2,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "pydantic>=2.6.0,<3.0.0",
  "sentence-transformers>=2.6.0,<3.0.0",
  "faiss-cpu>=1.7.4",
  "orjson>=3.10.0",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
  "uvloop; platform_system == 'Linux'",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "types-requests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
