[project]
name = "socionics-bot"
version = "0.1.0"
description = "Discord bot for Socionics research community with LLM-assisted responses"
authors = [ {name="Project Team"} ]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
  "discord.py>=2.3.2,<3.0.0",
  "httpx>=0.27.0,<0.28.0",
  "pydantic>=2.6.0,<3.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "sentence-transformers>=2.6.0,<3.0.0",
  "faiss-cpu>=1.7.4",
  "pandas>=2.2.0,<3.0.0",
  "pyarrow>=16.0.0,<20.0.0",
  "orjson>=3.10.0",
  "rich>=13.7.0",
  "tenacity>=8.2.0",
  "base58>=2.1.1",
  "uvloop; platform_system == 'Linux'",
  "python-dotenv>=1.0.0",
  "zstandard>=0.22.0",
  "brotli>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-requests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[project.scripts]
pdb-cli = "bot.pdb_cli:main"
